<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <ImageView
        android:id="@+id/imageViewUnidadTrabajo"
        android:layout_width="757dp"
        android:layout_height="662dp"
        android:layout_marginBottom="396dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/imagen_unidadtrabajo" />

    <TextView
        android:id="@+id/textViewJuntos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_juntos"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewUnidadTrabajo"
        app:layout_constraintVertical_bias="0.247" />

    <TextView
        android:id="@+id/textViewIntro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_breveIntro"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewJuntos"
        app:layout_constraintVertical_bias="0.148" />

    <Button
        android:id="@+id/btnVamos"
        android:layout_width="179dp"
        android:layout_height="66dp"
        android:text="@string/txt_vamos_btn"
        android:textSize="24sp"
        android:backgroundTint="@color/aquamarine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewIntro"
        app:layout_constraintVertical_bias="0.394" />

    <ImageView
        android:id="@+id/imagenViewTiendaCampaña"
        android:layout_width="51dp"
        android:layout_height="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.636"
        app:srcCompat="@drawable/icono_tiendacampa_a" />
</androidx.constraintlayout.widget.ConstraintLayout>