<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <LinearLayout
        android:id="@+id/lyCabecera"
        android:layout_width="422dp"
        android:layout_height="58dp"
        android:background="@color/fondoCabecera"
        android:backgroundTint="@color/fondoCabecera"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.006">

        <Button
            android:id="@+id/btnTienda"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:backgroundTint="@color/white"
            app:icon="@drawable/icono_tiendacampa_a"
            app:iconTint="@color/aquamarine" />

        <TextView
            android:id="@+id/textViewCabecera"
            android:layout_width="204dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:text="@string/txt_juntos"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnAcercaDe"
            android:layout_width="66dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:backgroundTint="@color/purple"
            app:icon="@android:drawable/ic_menu_help"
            app:iconSize="22dp"
            app:iconTint="@color/white" />

        <Button
            android:id="@+id/btnPerfil"
            android:layout_width="66dp"
            android:layout_height="50dp"
            android:layout_marginRight="5dp"
            android:backgroundTint="@color/grey"
            app:icon="@drawable/icons8_usuario_masculino_en_c_rculo_100" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtPregunta"
        android:layout_width="381dp"
        android:layout_height="41dp"
        android:fontFamily="@font/times"
        android:text="@string/txt_Pregunta"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.347"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewSofa" />

    <ImageView
        android:id="@+id/imageViewSofa"
        android:layout_width="392dp"
        android:layout_height="203dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lyCabecera"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/sofa" />

    <TextView
        android:id="@+id/txtEspacioDeTrabajo"
        android:layout_width="352dp"
        android:layout_height="32dp"
        android:background="@color/purpleClaro"
        android:fontFamily="@font/times"
        android:text="@string/txt_espacioTrabajo"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/lyCabecera"
        app:layout_constraintVertical_bias="0.119" />

    <Button
        android:id="@+id/btnConectaGrande"
        android:layout_width="125dp"
        android:layout_height="130dp"
        android:layout_marginStart="20dp"
        android:backgroundTint="@color/azulClaro"
        app:icon="@drawable/conecta_btn_grande_removebg_preview"
        app:iconSize="80dp"
        app:iconTint="@color/purple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.755"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.572" />

    <TextView
        android:id="@+id/textViewDocumentosGrande"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/times"
        android:text="@string/txt_docs"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.766"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDocumentosGrande"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnDocumentosGrande"
        android:layout_width="125dp"
        android:layout_height="130dp"
        android:layout_marginStart="20dp"
        android:backgroundTint="@color/azulClaro"
        app:icon="@drawable/documentos_btn_grande_removebg_preview"
        app:iconSize="80dp"
        app:iconTint="@color/ic_launcher_new_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.755"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.791" />

    <TextView
        android:id="@+id/textViewConectarGrande"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/times"
        android:text="@string/txt_conectar"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.729"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnConectaGrande"
        app:layout_constraintVertical_bias="0.003" />

    <TextView
        android:id="@+id/txtCalendarioIconoGrande"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/times"
        android:text="@string/txt_calendario"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.267"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCalendarioGrande"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnTareasGrande"
        android:layout_width="125dp"
        android:layout_height="130dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/azulClaro"
        app:icon="@drawable/tares_btn_grande_removebg_preview"
        app:iconSize="70dp"
        app:iconTint="@color/ic_launcher_new_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.251"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.792" />

    <Button
        android:id="@+id/btnCalendarioGrande"
        android:layout_width="125dp"
        android:layout_height="130dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/azulClaro"
        app:icon="@drawable/calendario_btn_grande_removebg_preview"
        app:iconSize="80dp"
        app:iconTint="@color/purple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.251"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.574" />

    <TextView
        android:id="@+id/textViewTareasGrande"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/times"
        android:text="@string/txt_tareas"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.28"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnTareasGrande" />

</androidx.constraintlayout.widget.ConstraintLayout>